--- a/Namespace.yml
+++ b/Namespace.yml
@@ -38,3 +38,140 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: mariadb
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: wordpress
+  namespace: relative-fawn
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: wordpress
+  template:
+    metadata:
+      labels:
+        app: wordpress
+    spec:
+      initContainers:
+        - name: init-wordpress
+          image: busybox
+          command: ['sh', '-c', 'echo Init Container Complete']
+          resources:
+            requests:
+              memory: "600Mi"                            
+              cpu: "400m"                                      
+            limits:
+              memory: "600Mi" 
+              cpu: "400m"
+      containers:
+        - name: wordpress
+          image: wordpress:latest
+          ports:
+            - containerPort: 80
+          resources:
+            requests:
+              memory: "600Mi"                                
+              cpu: "400m"                                            
+            limits:
+              memory: "600Mi"
+              cpu: "400m"
+
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: test
+  name: synergy-leverager
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: test
+  strategy: {}
+  template:
+    metadata:
+      labels:
+        app: test
+    spec:
+      containers:
+      - name: monitor
+        image: lfcert/monitor:latest
+        env:
+        - name: LOG_FILENAME
+          value: /var/log/synergy-leverager.log
+        ports:
+        - containerPort: 80
+          protocol: TCP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: front-end
+  namespace: spline-reticulator
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: front-end
+  template:
+    metadata:
+      labels:
+        app: front-end
+    spec:
+      containers:
+      - name: nginx
+        image: nginx
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: busybox-logger 
+  namespace: priority
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: busybox
+  template:
+    metadata:
+      labels:
+        app: busybox
+    spec:
+      containers:
+      - name: logging
+        image: busybox-image
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mariadb-pod
+  namespace: mariadb
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: mdb-label
+  template:
+    metadata:
+      labels:
+        app: mdb-label
+    spec:
+      containers:
+      - name: mysql-deployment
+        image: mysql
+        env:
+        - name: MYSQL_ROOT_PASSWORD
+          value: jbcmksl
+        volumeMounts:
+        - mountPath: "/var/lib/mysql"
+          name: mypd
+      volumes:
+      - name: mypd
+        persistentVolumeClaim:
+          claimName: “ ”
+
