--- a/Namespace.yml
+++ b/Namespace.yml
@@ -176,3 +176,31 @@ spec:
           claimName: ' '
 ---
 
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: certificates.cert-manager.io
+spec:
+  group: cert-manager.io
+  names:
+    plural: certificates
+    singular: certificate
+    kind: Certificate
+    shortNames:
+      - cert
+  scope: Namespaced
+  versions:
+    - name: v1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              properties:
+                commonName:
+                  type: string
+---
+
